// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Label should render a label component 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(200,10%,20%);
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 18px;
    line-height: 1.5;
  }
}

<label
    class="c0"
  >
    It is important to label UI elements
  </label>
</DocumentFragment>
`;

exports[`component: Label should support margin space props 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(200,10%,20%);
  margin-left: 4px;
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 18px;
    line-height: 1.5;
  }
}

<label
    class="c0"
  />
</DocumentFragment>
`;
